// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaWithRemainingChars component should render a textarea field with a limited number of characters (empty value) 1`] = `
<div>
  <FormControl
    bsClass="form-control"
    className="txt-area"
    componentClass="textarea"
    id="my-textarea"
    maxLength={600}
    onChange={[MockFunction]}
    onClick={[MockFunction]}
    placeholder="Use the mobile ADP capacitor, then you can calculate the mobile port!"
    rows={4}
    value=""
  />
  <div
    className="annotation margin-xs"
  >
    <Translate
      nbCharacters={600}
      value="debate.remaining_x_characters"
    />
  </div>
</div>
`;

exports[`TextAreaWithRemainingChars component should render a textarea field with a limited number of characters 1`] = `
<div>
  <FormControl
    bsClass="form-control"
    className="txt-area"
    componentClass="textarea"
    id="my-textarea"
    maxLength={600}
    onChange={[MockFunction]}
    onClick={[MockFunction]}
    placeholder="Use the mobile ADP capacitor, then you can calculate the mobile port!"
    rows={4}
    value="Try to bypass the USB port, maybe it will generate the wireless sensor!"
  />
  <div
    className="annotation margin-xs"
  >
    <Translate
      nbCharacters={529}
      value="debate.remaining_x_characters"
    />
  </div>
</div>
`;
